# anime-site

./: .env  .gitignore  .pre-commit-config.yaml  manage.py  pyproject.toml  setup.cfg
anime/: admin.py  choices.py  forms.py  models.py  urls.py  views.py
anime/migrations/: 0001_initial.py  0002_anime_is_draft_animereview_parent_episodeshots_and_more.py  0003_episodereview_parent_alter_anime_status_and_more.py  0004_studio_image.py  0005_alter_vote_rating.py  0006_anime_duration.py  0007_anime_quality_alter_anime_duration.py  0008_alter_anime_quality_alter_episode_anime.py  0009_account.py  0010_alter_account_options_alter_account_user.py  0011_account_slug_alter_account_date_of_birth_and_more.py  0012_alter_followinganime_anime_alter_followinganime_user.py
anime/templates/: about.html  account_edit.html  anime-details.html  anime-watching.html  anime_detail.html  anime_list.html  base.html  blog-details.html  blog.html  categories.html  category_detail.html  episode_detail.html  episode_list.html  export_to_excel.html  index.html  login.html  profile.html  reset_password.html  search.html  signup.html  studio.html
anime/templates/include/: footer.html  header.html  sidebar.html
anime/templates/tags/: hero_section.html  last_anime.html  popular_anime.html  popular_anime_in_sidebar.html  the_last_reviewed_anime.html  trend_anime.html
anime/templatetags/: anime_tag.py
anime_site/: asgi.py  settings.py  urls.py  wsgi.py
project_root/: settings.py  urls.py
static/css/: style.css
static/js/: script.js
templates/anime/: anime_list.html
