[tool.poetry]
name = "anime-site"
version = "0.1.0"
description = ""
authors = ["NaiNaniNai <nail02-02@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.6"
psycopg2 = "^2.9.9"
environ = "^1.0"
django-environ = "^0.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
